removed redundant folders/ code. Added images to application. Renamed test location

--- a/RevolutCode/src/main/resources/public/index.html
+++ b/RevolutCode/src/main/resources/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <meta charset="UTF-8">
+<img src="revolutLogo.png" width="550" height="150" alt="RevolutLogo">
 <h2>Make Transfer:</h2>
 <form method="post" action="/make-transfer">
     Choose amount to transfer
