Overhauled the post functionality. Changes hash map to use the local database, created the bank transfer statment for transferring to both acounts. Added image for Revolut logo. Added function to end session.

--- a/RevolutCode/src/main/resources/public/index.html
+++ b/RevolutCode/src/main/resources/public/index.html
@@ -28,9 +28,9 @@
     <br>
     <button>Submit</button>
 </form>
-<!-- <h1>Upload example</h1>
-<form method="post" action="/upload-example" enctype="multipart/form-data">
-    <input type="file" name="files" multiple>
-    <button>Submit</button>
-</form> -->
+<h2>Click below to exit</h2>
+<form method="get" action="/exit">
+    <br>
+    <button>EXIT</button>
+</form>
 </html>
